Add keyword to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="sr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Arsenov Trans</title>
+    <title>Transportne usluge - Arsenov Trans</title>
+    <meta name="description" content="Arsenov Trans nudi međunarodni i domaći transport robe. Kontaktirajte nas za pouzdane transportne usluge.">
+    <meta name="keywords" content="Transport, Međunarodni transport, Domaći transport, Prevoz robe, Transportne usluge, Kamionski prevoz, Logistika, Transportna kompanija, Arsenov Trans, Kontakt transport">
     <link rel="icon" href="img/tbicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/onama.css">
