--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Transportne usluge - Arsenov Trans</title>
     <meta name="description" content="Arsenov Trans nudi međunarodni i domaći transport robe. Kontaktirajte nas za pouzdane transportne usluge.">
-    <meta name="keywords" content="Transport, Međunarodni transport, Domaći transport, Prevoz robe, Transportne usluge, Kamionski prevoz, Logistika, Transportna kompanija, Arsenov Trans, Kontakt transport">
+    <meta name="keywords" content="transport logistika, logistika transport, zbirni transport, internacionalni transport, kamioni transport, transport i spedicija, spedicija i transport, transport kamioni, cargo telefon, kamioni sleperi, spediteri srbija">
     <link rel="icon" href="img/tbicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/onama.css">
