--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="css/kontakt.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="your_nonce"></script>
+
+    <meta property="og:title" content="Transportne usluge - Arsenov Trans">
+    <meta property="og:description" content="Arsenov Trans nudi transport logistika, međunarodni i domaći transport robe, kamioni transport i spedicija. Kontaktirajte nas za pouzdane transportne usluge.">
+    <meta property="og:image" content="https://zivkoarsenov.github.io/ReklamniSajt-ProjekatFax/img/naslovna.jpg">
+    <meta property="og:url" content="https://zivkoarsenov.github.io/ReklamniSajt-ProjekatFax/">
+    <meta property="og:type" content="website">
+    
   </head>
   <body>
     <div class="okvir">
@@ -21,7 +30,7 @@
           <i class="fas fa-envelope"><span>arsenovtransport@gmail.com</span></i>
         </div>
         <div class="menilinija">
-          <img src="img/logoarsenov.jpg" alt="logoarsenov">
+          <img src="img/logoarsenov.jpg" alt="Arsenov Trans logo">
           <input type="checkbox" id="menibox">
           <label for="menibox" class="prikazidugme">
             <i class="fas fa-ellipsis-h"></i>
@@ -37,7 +46,7 @@
           </ul>
         </div>
         <div class="naslovna slika">
-          <img src="img/naslovna.jpg" alt="kamioni">
+          <img src="img/naslovna.jpg" alt="kamioni transport">
         </div>
       </div>
       <div class="sadrzaj">
@@ -47,6 +56,12 @@
           <p>Arsenov Trans nudi pouzdane transportne usluge, uključujući transport logistika, međunarodni transport, domaći transport, kamioni transport i spedicija. Kontaktirajte nas za više informacija.</p>
           <h2>Naše usluge</h2>
           <p>Specijalizovani smo za zbirni transport, internacionalni transport, kamioni transport, transport i spedicija, spedicija i transport, transport kamioni, cargo telefon, kamioni sleperi, i spediteri srbija.</p>
+
+          <div id="face">
+            <div class="fb-like" data-href="https://zivkoarsenov.github.io/ReklamniSajt-ProjekatFax/" data-width="" data-layout="standard" data-action="like" data-size="small" data-
+        </div>
+        
+
         </div>
       </div>
     </div>
